--- a/app/templates/authenticate.hbs
+++ b/app/templates/authenticate.hbs
@@ -37,26 +37,24 @@
 
           <div class="row">
             <div class="small-12 columns">
-              <label class="form-label">{{t "_resend.no_sms"}} <a href="#" {{action "resendPin" }} id="resend-pin">{{t "_resend.resend"}}</a></label>
+              <label class="form-label">{{t "_resend.no_sms"}} <a href="#" class="auth_links" {{action "resendPin" }} id="resend-pin">{{t "_resend.resend"}}</a></label>
 
               <ul>
                 {{#if loginParamEmail}}
                   <li>
                     <label class="form-label">
                       {{t '_resend.email_correct' email=loginParam}}
-                      {{#link-to 'login'}}{{t "_resend.go_back"}}{{/link-to}}
+                      {{#link-to 'login' classNames="auth_links"}}{{t "_resend.go_back"}}{{/link-to}}
                     </label>
                   </li>
+                  <li><label class="form-label">{{t '_resend.check_junk'}}</label></li>
                 {{else}}
                   <li>
                     <label class="form-label">
                       {{t '_resend.phone_correct' phone=loginParam}}
-                      {{#link-to 'login'}}{{t "_resend.go_back"}}{{/link-to}}
+                      {{#link-to 'login' classNames="auth_links"}}{{t "_resend.go_back"}}{{/link-to}}
                     </label>
-                </li>
-                {{/if}}
-                {{#if loginParamEmail}}
-                  <li><label class="form-label">{{t '_resend.check_junk'}}</label></li>
+                  </li>
                 {{/if}}
                 <li><label class="form-label">{{t '_resend.not_working'}}</label></li>
               </ul>
