--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -48,7 +48,7 @@
             </div>
             <div class="small-12 columns">
               <label class="form-label">
-                {{t "login.privacy"}}{{#link-to "privacy"}}{{t "login.policy"}}{{/link-to}}
+                {{t "login.privacy"}}{{#link-to "privacy" classNames="auth_links"}}{{t "login.policy"}}{{/link-to}}
               </label>
             </div>
           </div>
