fix back link issues for account details

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -18,7 +18,7 @@
 
       {{#validatable-form onSubmit=(action 'resendPin') as |form|}}
       <div class="row">
-        <div class="small-12 columns">
+        <div class="small-12 large-11 columns">
           <div class="mobile center_align">
             <div class="row">
               <div class="small-12 columns">
