--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -9,14 +9,10 @@
             <section class="main-section new-user-section ui login_page book_appointment_headers">
               <nav class="tab-bar">
                 <section class="left-large inline-content">
-                  {{fa-icon "angle-left"}}
-                  {{#if (is-equal prevPath (is-or 'orders.booking' 'orders.goods'))}}
-                    {{#link-to prevPath order.id classNames="back"}}{{t "back"}}{{/link-to}}
-                  {{else if (is-equal previousRouteName 'my_orders') }}
-                     {{#link-to "my_orders" classNames="back"}}{{t "back"}}{{/link-to}}
-                  {{else}}
-                    {{#link-to "home" classNames="back"}}{{t "back"}}{{/link-to}}
-                  {{/if}}
+                  <div class="back" {{action 'back'}}>
+                    {{fa-icon "angle-left"}}
+                    {{t "back"}}
+                  </div>
                 </section>
                  <section class="middle tab-bar-section">
                   <h1 class="title"> {{t 'order.request_purpose.title'}} </h1>
