--- a/app/templates/order/search_code.hbs
+++ b/app/templates/order/search_code.hbs
@@ -1,15 +1,15 @@
 <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
   <div class="row fixed_search_header search-box ui items-search">
-    <div class="small-3 columns ">
+    <div class="small-3 columns back_button">
       <a {{action "cancelSearch"}} class="back">
         <i class="fa fa-angle-left back_icon" aria-hidden="true"></i>
-        <div class="back_text">
+        <span class="back_text">
           {{#if inlineDescription}}
             {{t 'cancel'}}
           {{else}}
             {{t 'back'}}
           {{/if}}
-        </div>
+        </span>
       </a>
     </div>
 
