--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -23,7 +23,7 @@
   }
 
   i {
-    position: inherit;
+    position: absolute;
     right: 2.5%;
     top: 0.93rem;
     color: $black;
@@ -44,6 +44,9 @@
 
   .back_button {
     margin-top: 1.5%;
+    i {
+      position: inherit;
+    }
   }
 
   .organisation_back {
