fix continue button

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -43,7 +43,7 @@
             <div class="row collapse">
               <div class="small-12 medium-8 columns">
                 <button id="getsmscode" class="button expand expand_button"
-                  {{action 'submit' target=form}}>{{t "login.smscode"}}</button>
+                  {{action 'submit' target=form}}>{{t "login.continue"}}</button>
               </div>
             </div>
             <div class="small-12 columns">
