GCW-2608 back and cancel link no clickable

--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -199,6 +199,14 @@
   }
 }
 
+.back-button {
+  cursor: pointer;
+}
+
+.cancel-section{
+  margin-right: unset;
+}
+
 .district-select {
   #district-select-dropdown{
     @media #{$small-only}{
