--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -8,8 +8,8 @@
           <div class="row">
             <section class="main-section new-user-section ui login_page book_appointment_headers">
               <nav class="tab-bar">
-                <section class="left-large inline-content">
-                  <div class="back" {{action 'back'}}>
+                <section class="left-large back-button inline-content">
+                  <div class="back-button" {{action 'back'}}>
                     {{fa-icon "angle-left"}}
                     {{t "back"}}
                   </div>
@@ -17,15 +17,17 @@
                  <section class="middle tab-bar-section">
                   <h1 class="title"> {{t 'order.request_purpose.title'}} </h1>
                 </section>
-                {{#if order}}
-                  <section {{action "cancelBookingPopUp"}} id="cancel-booking-link" class="right-large inline-content right-align">
-                    {{t "cancel"}}
-                  </section>
-                {{else}}
-                  {{#link-to "home" id="cancel-booking-link" classNames="right-large inline-content right-align"}}
-                    {{t "cancel"}}
-                  {{/link-to}}
-                {{/if}}
+                <section class="right-large inline-content right-align cancel-section">
+                  {{#if order}}
+                    <div {{action "cancelBookingPopUp"}} id="cancel-booking-link">
+                        {{t "cancel"}}
+                    </div>
+                  {{else}}
+                    {{#link-to "home" id="cancel-booking-link" tagName="div"}}
+                      {{t "cancel"}}
+                    {{/link-to}}
+                  {{/if}}
+                </section>
               </nav>
             </section>
             <div class="row inner-section">
