fix back button css

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,7 +1,7 @@
 <section class="main-section new-user-section ui login_page">
   <nav class="tab-bar">
     <section class="left-large">
-      <div class="back" {{action 'back'}}>
+      <div class="back-button" {{action 'back'}}>
         {{fa-icon "angle-left"}} {{t "back"}}
       </div>
     </section>
