--- a/app/templates/terms.hbs
+++ b/app/templates/terms.hbs
@@ -2,7 +2,7 @@
   <section class="main-section terms faq_list">
     <nav class="tab-bar">
       <section class="left-large">
-        <div class="back" {{action 'back'}}>
+        <div class="back-button" {{action 'back'}}>
           {{fa-icon "angle-left"}} {{t "back"}}
         </div>
       </section>
