--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -136,13 +136,14 @@
     left: 50%;
   }
 }
-
-.back {
-  padding-top: 0.9rem;
-  color: #979797;
-  cursor: pointer;
-  font-size: 0.9rem;
-  padding-left: 1.5rem;
+.search-code {
+  .back-link {
+    padding-top: 0.9rem;
+    color: #979797;
+    cursor: pointer;
+    font-size: 0.9rem;
+    padding-left: 1.5rem;
+  }
 }
 
 .contact_us{
