--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -138,8 +138,9 @@
 }
 .search-code {
   .back-link {
+    text-decoration: none;
     padding-top: 0.9rem;
-    color: #979797;
+    color: #000 !important;
     cursor: pointer;
     font-size: 0.9rem;
     padding-left: 1.5rem;
