--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -1,7 +1,7 @@
 {{#if isMobileApp}}
 {{scroll-to-bottom customClass="account-detail-info-scroll-arrow"}}
 {{/if}}
-<div class="row">
+<div class="row account_details">
   <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
     <div class="row checkout_pages">
       <div class="small-12 medium-12 large-12 columns">
