bread crumbs for browse

--- a/app/styles/templates/_browse.scss
+++ b/app/styles/templates/_browse.scss
@@ -1,3 +1,9 @@
+.browse-label{
+  font-size: 14px;
+  padding: 1em 0;
+  border-bottom: 1px solid #334f75;
+}
+
 .list {
   margin: 0;
   padding: 0;
