--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -1,8 +1,9 @@
 .tab-bar.category_page {
-  height: auto;
-  @media #{$small-only} {
-    height: 6.5rem;
+  .breadcrumbs>* {
+    color: #fff;
+    text-transform: none;
   }
+  height: auto;
   @media only screen and (min-width: 120.1em) {
     margin-left: 4rem !important;
   }
@@ -24,7 +25,7 @@
       }
     }
   }
-} 
+}
 
 .items_list {
   li {
@@ -54,7 +55,25 @@
   }
 }
 
-.item_desc{
+.image-item-overlay {
+  @media #{$small-only} {
+    position: absolute;
+    background: #002352;
+    margin-top: -25%;
+    opacity: .8;
+    width: 46%;
+    padding-bottom: 10%;
+  }
+  .item_desc {
+    @media #{$small-only} {
+      margin-top: 10%;
+      color: #fff;
+      padding-bottom: 2%;
+    }
+  }
+}
+
+.item_desc {
   @media #{$medium-up} {
     min-height: 2.9rem;
   }
