--- a/app/templates/components/cloudinary-image-tag.hbs
+++ b/app/templates/components/cloudinary-image-tag.hbs
@@ -1,2 +1,14 @@
- <img src="/assets/images/image-loading.gif" class="cl-loading-img {{unless loading 'hidden'}}"/>
-<img src="{{src}}" class="cl-item-image {{if loading 'hidden'}} {{if isSmallScreen 'profile'}}"/>
+<div class="image-tabs">
+  <img src="/assets/images/image-loading.gif" class="cl-loading-img {{unless loading 'hidden'}}"/>
+  <img src="{{src}}" class="cl-item-image {{if loading 'hidden'}} {{if isSmallScreen 'profile'}}"/>
+
+  {{#if displayItemName}}
+    <div class="image-item-overlay">
+      <div class="item_desc">
+        <li class="ellipsis two-line-ellipsis">
+          {{item.packageType.name}}
+        </li>
+      </div>
+    </div>
+  {{/if}}
+</div>
