--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -259,3 +259,12 @@ $sidebar-width: 7.8rem;
 .move-bottom {
   top: 4.85em;
 }
+
+.search-icon{
+  float: right;
+}
+
+.cart-icon-with-search {
+  margin-right: 12%;
+  font-weight: 900;
+}
