--- a/app/styles/templates/_package_category.scss
+++ b/app/styles/templates/_package_category.scss
@@ -1,29 +1,50 @@
+.category_page{
+  .current{
+    color: white !important;
+    font-weight: bolder !important;
+  }
+  .underline-link{
+    text-decoration: underline;
+  }
+  .sort{
+    .title{
+      padding-top: 7px;
+    }
+  }
+  .all-categories,
+  .sort {
+    font-size: 0.7rem;
+  }
+  .category_select{
+    label{
+      line-height: unset;
+    }
+    display: inline-flex;
+  }
+  select {
+    -webkit-appearance: unset !important;
+    background-color: unset;
+    color: #a3aab6;
+    text-decoration: underline;
+    font-size: 0.7rem !important;
+    height: unset;
+    padding: unset;
+    border: unset;
+  }
+}
 .tab-bar.category_page {
-  .breadcrumbs>* {
+  .current{
     color: #fff;
+    font-weight: 900;
+  }
+
+  .breadcrumbs>* {
+    color: #a3aab6;
     text-transform: none;
   }
   height: auto;
   @media only screen and (min-width: 120.1em) {
     margin-left: 4rem !important;
-  }
-
-  .filter-container {
-    display: flex;
-    flex-wrap: wrap;
-    .filter {
-      display: flex;
-      flex-wrap: nowrap;
-      flex-grow: 1;
-      .filter-label {
-        white-space: nowrap;
-        width: 6rem;
-      }
-      .filter-list  {
-        min-width: 7rem;
-        flex: 0 0 7rem;
-      }
-    }
   }
 }
 
@@ -60,9 +81,10 @@
     position: absolute;
     background: #002352;
     margin-top: -25%;
+    display: block;
     opacity: .8;
     width: 46%;
-    padding-bottom: 10%;
+    padding-bottom: 12%;
   }
   .item_desc {
     @media #{$small-only} {
