--- a/app/templates/package_category.hbs
+++ b/app/templates/package_category.hbs
@@ -1,30 +1,28 @@
-<nav class="tab-bar category_page">
-  <section class='main-section ui'>
-    <h1 class="title hide-for-small">{{model.name}}</h1>
-    <nav class="breadcrumbs">
-      {{#link-to 'browse'}}All Goods{{/link-to}}
-      {{#link-to 'package_category' model.id classNames="current"}}{{model.name}}{{/link-to}}
-      {{select-list class="package-category" content=selectCategories on-change=(action (mut selectedCategoryId)) prompt="Filter these results"}}
-    </nav>
-  </section>
-</nav>
+<div class="category_page">
+  <nav class="tab-bar category_page">
+    <section class='main-section ui'>
+      <h1 class="title hide-for-small">{{model.name}}</h1>
+      <section class="search_icon right-small">
+        <i aria-hidden="true" class="fa fa-search"></i>
+      </section>
+      <nav class="breadcrumbs">
+        {{#link-to 'browse' classNames="underline-link"}}All Goods{{/link-to}}
+        {{#link-to 'package_category' model.id classNames="current"}}{{model.name}}{{/link-to}}
+        {{select-list class="category_select" content=selectCategories on-change=(action (mut selectedCategoryId)) prompt="All Results"}}
+      </nav>
+    </section>
+  </nav>
 
-<section class="main-section category-items-list">
-  <div class="filter-container1">
-    <div class="filter2">
-      <div class="filter-label1">
-        {{t "category.sort.title"}}:
+  <section class="main-section category-items-list">
+    <div class="row sort">
+      <div class="small-2 small-offset-6 columns large-1 large-offset-9 title" align="right">
+        {{t "category.sort.title"}} <i class="fa fa-sort-amount-desc" aria-hidden="true"></i>
       </div>
-      <div class="filter-list">
-        {{select-list class="package-category" content=sortOptions on-change=(action (mut selectedSort)) }}
+      <div class="small-4 large-2 columns dropdown" align="left">
+        {{ select-list class="package-category" content=sortOptions on-change=(action (mut selectedSort)) }}
       </div>
     </div>
-  </div>
-  {{paginated-items content=sortedItems page=page perPage=perPage query=query sortBy=selectedSort category=currentCategoryId}}
-</section>
 
-<style>
-  .filter-container1{
-    float: right;
-  }
-</style>
+    {{paginated-items content=sortedItems page=page perPage=perPage query=query sortBy=selectedSort category=currentCategoryId}}
+  </section>
+</div>
