--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -10,8 +10,8 @@
       <h1>{{pageTitle}}</h1>
     </section>
 
-    {{#if isBrowsePage}}
-      <section class="right-small" style="margin-right: 8%; font-weight: 900;">
+    {{#if showSearchIcon}}
+      <section class="right-small {{if hasCartItems 'cart-icon-with-search' 'search-icon'}}" align="center">
         <i aria-hidden="true" class="fa fa-search"></i>
       </section>
     {{/if}}
