add underline to link

--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -12,7 +12,7 @@
       <label class="form-label browse-label">
         <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
         {{t 'browse.intro_text'}}
-        {{#link-to "faq"}} {{ t "browse.faq" }} {{/link-to}}
+        {{#link-to "faq" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}
       </label>
     </div>
   </div>
