--- a/app/templates/authenticate.hbs
+++ b/app/templates/authenticate.hbs
@@ -1,4 +1,4 @@
-<div class="row checkout_pages">
+<div class="row checkout_pages login_page">
   {{#message-box-click-button btn1Click=true}}
     <div class="small-12 medium-9 large-6 columns">
       <section class="main-section new-user-section ui login_page">
