--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,4 +1,4 @@
-<div class="row checkout_pages">
+<div class="row checkout_pages login_page">
   <div class="small-12 medium-9 large-6 columns">
     <section class="main-section new-user-section ui login_page">
 
