--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -1,3 +1,16 @@
+.goods_search {
+  .back_button {
+    margin-top: 2% !important;
+  }
+  .back_icon{
+    display: flex;
+  }
+  .search_info{
+    margin-top: 5em;
+    font-size: 0.8em;
+    color: #fff;
+  }
+}
 .search-box {
   position: relative;
   padding: 0;
@@ -40,6 +53,14 @@
   .back_icon {
     margin-left: 10%;
     text-decoration: none;
+  }
+
+  .package_back {
+    text-decoration: none;
+    color: #000;
+    font-size: 0.9rem;
+    cursor: pointer;
+    margin-left: 15%;
   }
 
   .back_button {
@@ -136,7 +157,8 @@
     left: 50%;
   }
 }
-.search-code {
+.search-code,
+.goods_search {
   .back-link {
     text-decoration: none;
     padding-top: 0.9rem;
