--- a/app/styles/templates/_login.scss
+++ b/app/styles/templates/_login.scss
@@ -6,11 +6,14 @@
     label {
       cursor: default;
     }
+    .title{
+      cursor: default;
+    }
   }
 }
 
 .sent_code_to{
-  margin-left: 0.5em;
+  margin-left: 0.3125em;
   font-weight: bold;
 }
 
