show images-list instead of text-list

--- a/app/templates/components/cloudinary-image-tag.hbs
+++ b/app/templates/components/cloudinary-image-tag.hbs
@@ -6,7 +6,7 @@
     <div class="image-item-overlay">
       <div class="item_desc">
         <li class="ellipsis two-line-ellipsis">
-          {{item.packageType.name}}
+          {{displayItemName}}
         </li>
       </div>
     </div>
