--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -1,4 +1,7 @@
 .goods_search {
+  .main_section{
+    padding: 0 0.3em !important;
+  }
   .back_button {
     margin-top: 2% !important;
   }
@@ -11,6 +14,27 @@
     font-size: 0.8rem;
     @media #{$small-only} {
       font-size: 0.6rem;
+    }
+  }
+}
+
+.goods_search{
+  .list-image{
+    padding: 1em 1em;
+  }
+  .image-item-overlay {
+    position: absolute;
+    background: #002352;
+    display: block;
+    opacity: 0.7;
+    width: 100%;
+    bottom: 0;
+    height: 40%;
+
+    .item_desc {
+      color: #fff;
+      font-size: 0.9em;
+      padding: 1em 0;
     }
   }
 }
@@ -146,7 +170,6 @@
       padding: 0.2rem 0;
     }
   }
-
   .org_search{
     color: #E2E6EB;
     margin-left: -2%;
@@ -172,6 +195,15 @@
     cursor: pointer;
     font-size: 0.9rem;
     padding-left: 1.5rem;
+  }
+  li {
+    border-bottom: unset !important;
+  }
+  .title {
+    margin-top: 0.8em;
+    margin-left: 0.3em;
+    font-size: 1em;
+    color: white;
   }
 }
 
