hide search icon from live until search feature is available

--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -2,9 +2,9 @@
   <section class='main-section'>
     <h1 class="browse-title" align="center">{{t "browse.title"}}</h1>
   </section>
-  <section class="right-small" style="float: right;">
+  {{!-- <section class="right-small" style="float: right;">
     <i aria-hidden="true" class="fa fa-search"></i>
-  </section>
+  </section> --}}
 </nav>
 <section class="main-section">
   <div class="row home_section show-for-small small light">
