--- a/app/templates/package_category.hbs
+++ b/app/templates/package_category.hbs
@@ -2,13 +2,13 @@
   <nav class="tab-bar category_page">
     <section class='main-section ui'>
       <h1 class="title hide-for-small">{{model.name}}</h1>
-      <section class="search_icon right-small">
+      {{!-- <section class="search_icon right-small">
         <i aria-hidden="true" class="fa fa-search"></i>
-      </section>
+      </section> --}}
       <nav class="breadcrumbs">
-        {{#link-to 'browse' classNames="underline-link"}}All Goods{{/link-to}}
+        {{#link-to 'browse' classNames="underline-link"}}{{t 'browse.all_goods'}}{{/link-to}}
         {{#link-to 'package_category' model.id classNames="current"}}{{model.name}}{{/link-to}}
-        {{select-list class="category_select" content=selectCategories on-change=(action (mut selectedCategoryId)) prompt="All Results"}}
+        {{select-list class="category_select" content=selectCategories on-change=(action (mut selectedCategoryId)) prompt=(t 'browse.filter_results')}}
         <i class="fa fa-caret-down category_select"></i>
       </nav>
     </section>
