--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -10,11 +10,11 @@
       <h1>{{pageTitle}}</h1>
     </section>
 
-    {{#if showSearchIcon}}
+    {{!-- {{#if showSearchIcon}}
       <section class="right-small {{if hasCartItems 'cart-icon-with-search' 'search-icon'}}" align="center">
         <i aria-hidden="true" class="fa fa-search"></i>
       </section>
-    {{/if}}
+    {{/if}} --}}
 
     {{#if hasCartItems}}
       <section class="right-small" {{action 'displayCart'}}>
