--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -2,6 +2,7 @@
   <section class='main-section'>
     <h1 class="browse-title" align="center">{{t "browse.title"}}</h1>
   </section>
+  {{!-- commented temporarily to hide search icon from live app until search feature is available --}}
   {{!-- <section class="right-small" style="float: right;">
     <i aria-hidden="true" class="fa fa-search"></i>
   </section> --}}
