--- a/app/templates/package_category.hbs
+++ b/app/templates/package_category.hbs
@@ -2,6 +2,7 @@
   <nav class="tab-bar category_page">
     <section class='main-section ui'>
       <h1 class="title hide-for-small">{{model.name}}</h1>
+      {{!-- commented temporarily to hide search icon from live app until search feature is available --}}
       {{!-- <section class="search_icon right-small">
         <i aria-hidden="true" class="fa fa-search"></i>
       </section> --}}
