--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -10,6 +10,7 @@
       <h1>{{pageTitle}}</h1>
     </section>
 
+    {{!-- commented temporarily to hide search icon from live app until search feature is available --}}
     {{!-- {{#if showSearchIcon}}
       <section class="right-small {{if hasCartItems 'cart-icon-with-search' 'search-icon'}}" align="center">
         <i aria-hidden="true" class="fa fa-search"></i>
