--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -5,8 +5,8 @@
   <section class='main-section'>
     <div class="row">
       <div class="large-8 medium-8 small-12 columns hide-for-small package_catogory_header">
-        <div class="package_back_button" {{action 'back'}}>
-          <span class="package_category_link">{{categoryObj.name}}</span>
+        <div class="package_back_button">
+          <span class="package_category_link" {{action 'back'}}>{{categoryObj.name}}</span>
           <span class="package-type">\ {{item.packageType.name}}</span>
         </div>
       </div>
