--- a/app/templates/components/small-cart-toggle-view.hbs
+++ b/app/templates/components/small-cart-toggle-view.hbs
@@ -8,17 +8,17 @@
 
   {{#if showCartSummary}}
     <div class="small-12 columns cart-section small-cart-view">
-      {{#each cart.content as |record|}}
+      {{#each cart.cartItems as |record|}}
         <li>
           <div class="row">
             <div class="small-3 columns">
-              <img class="thumb-image {{unless record.available 'grayed-image'}}" src="{{record.imageUrl}}" />
+              <img class="thumb-image {{unless record.isAvailable 'grayed-image'}}" src="{{record.imageUrl}}" />
             </div>
 
             <div class="small-9 columns">
               {{record.name}}
 
-              {{#unless record.available}}
+              {{#unless record.isAvailable}}
                 <div class="unavailable">{{t "cart_content.unavailable"}}</div>
               {{/unless}}
             </div>
