--- a/app/styles/confirm_booking.scss
+++ b/app/styles/confirm_booking.scss
@@ -1,3 +1,19 @@
+.confirm-booking-page {
+
+  .cart-item-info {
+    &.unavailable {
+      img {
+        opacity: 0.5;
+      }
+      .package-name {
+        text-decoration: line-through;
+      }
+    }
+  }
+
+}
+
+
 .your-detail {
   .detail {
     color: white;
@@ -17,8 +33,4 @@
   .thumb-image {
     height: 5.5rem;
   }
-}
-
-.booking-success-state {
-  font-size: 150%;
 }
