--- a/app/templates/cart_content/_full_view.hbs
+++ b/app/templates/cart_content/_full_view.hbs
@@ -19,20 +19,27 @@
 <div class="row item-collection">
   <div class="small-12 columns">
 
-    {{#each cart.content as |record|}}
+    {{#each cart.cartItems as |cartItem|}}
         <li>
-          <div class="row" {{action 'updateCartItemParams' record.id}}>
-            <div class="small-3 columns cart-redirect-link {{if (is-not record.available) disabled}}" {{action 'updateCartItemParams' record.id}}>
-              <img class="thumb-image {{unless record.available 'grayed-image'}}" src="{{record.imageUrl}}" />
+          <div class="row">
+            <div class="small-3 columns cart-redirect-link {{if (is-not cartItem.isAvailable) disabled}}" {{action 'updateCartItemParams' cartItem}}>
+              <!-- Thumbnail -->
+              <img 
+                class="thumb-image {{unless cartItem.isAvailable 'grayed-image'}}"
+                src="{{cartItem.package.favouriteImage.cartImageUrl}}" />
             </div>
 
-            <div class="small-6 columns cart-redirect-link {{if (is-not record.available) disabled}}" {{action 'updateCartItemParams' record.id}}>
-              {{record.name}}
-              {{#unless record.available}}
+            <div class="small-6 columns cart-redirect-link {{if (is-not cartItem.isAvailable) disabled}}" {{action 'updateCartItemParams' cartItem}}>
+              <!-- Title -->
+              {{cartItem.package.packageType.name}}
+
+              <!-- Availability -->
+              {{#unless cartItem.isAvailable}}
                 <div class="unavailable">{{t "cart_content.unavailable"}}</div>
               {{/unless}}
             </div>
-            <div class="small-3 columns remove_link" {{action 'removeItem' record.id record.modelType}}>
+
+            <div class="small-3 columns remove_link" {{action 'removeCartItem' cartItem}}>
               <i class="fa fa-times" aria-hidden="true"></i>
               <span>{{t "cart_content.remove"}}</span>
             </div>
