fix minor UI issues

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -1,11 +1,11 @@
 .image-tabs{
-  .item_package_category {
+  .item-package-category {
     cursor: pointer;
     font-size: 0.9em !important;
     text-decoration: underline;
   }
 
-  .item_notes {
+  .item-notes {
     font-size: 0.8em !important;
     font-weight: unset !important;
   }
