--- a/app/templates/components/cloudinary-image-tag.hbs
+++ b/app/templates/components/cloudinary-image-tag.hbs
@@ -5,11 +5,11 @@
   <div class="image-item-overlay">
     <div class="item_desc">
       <li class="ellipsis two-line-ellipsis">
-        <span class="item_package_category">
+        <span class="item-package-category">
           {{item.packageType.name}}
         </span>
         :
-        <span class="item_notes">
+        <span class="item-notes">
           {{item.notes}}
         </span>
       </li>
