--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -58,7 +58,7 @@
 
     @media #{$small-only} {
       margin-left: -10%;
-      font-size: 0.6rem;
+      font-size: 0.7rem;
     }
   }
 
@@ -133,17 +133,23 @@
 
   @media #{$medium-up} {
     -webkit-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
     left: 50%;
   }
 }
 .search-code {
   .back-link {
     text-decoration: none;
-    padding-top: 0.9rem;
+    padding-top: 0.8rem;
     color: #000 !important;
     cursor: pointer;
     font-size: 0.9rem;
     padding-left: 1.5rem;
+
+    @media #{$small-only} {
+      margin-left: -10%;
+      font-size: 0.7rem;
+    }
   }
 }
 
