Save guest cart items to localstorage

--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -19,6 +19,10 @@
       width: 100%;
       margin-left: 0rem !important;
     }
+
+    &.show-error {
+      display: block !important;
+    }
   }
 
   .form__control.form__control--error .input-error {
