--- a/app/styles/confirm_booking.scss
+++ b/app/styles/confirm_booking.scss
@@ -11,6 +11,22 @@
     }
   }
 
+  a {
+    color: #a3aab6;
+    text-decoration: underline;
+  }
+
+  .red-warning {
+    background: #ED4C4E;
+    color: white;
+    padding: 0.2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .request_more_link {
+    text-align: center;
+  }
 }
 
 
