--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -51,9 +51,9 @@
       {{partial "order/goods_detail"}}
     {{/if}}
 
-    {{!-- Orders Package section --}}
+    {{!-- Cart section --}}
     {{#if order.isOnlineOrder }}
-      {{partial "order/orders_package_detail"}}
+      {{partial "order/embed_cart_detail"}}
     {{/if}}
 
     {{!-- Appointment details section --}}
