--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -66,6 +66,14 @@
     border-color: #fff;
     background-color: transparent;
   }
+
+  .red-warning {
+    background: #ED4C4E;
+    color: white;
+    padding: 0.2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .cart-redirect-link {
