--- a/app/styles/templates/_login.scss
+++ b/app/styles/templates/_login.scss
@@ -42,7 +42,7 @@ input:-webkit-autofill {
   border: 1px solid;
 }
 
-.login {
+.warning_empty.login {
   width: 100% !important;
   margin-left: .28rem !important;
 
