GCW 2616 browse goods search (#404)
 implement search for goods, search white space on left of login button

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -1,3 +1,56 @@
+.image-tabs{
+  .item-package-category {
+    cursor: pointer;
+    font-size: 0.9em !important;
+    text-decoration: underline;
+  }
+
+  .item-notes {
+    font-size: 0.8em !important;
+    font-weight: unset !important;
+  }
+}
+
+.goods_search {
+  .main_section{
+    padding: 0 0.3em !important;
+  }
+  .back_button {
+    margin-top: 2% !important;
+  }
+  .back_icon{
+    display: flex;
+  }
+  .search_info{
+    margin-left: 5%;
+    color: black;
+    font-size: 0.8rem;
+    @media #{$small-only} {
+      font-size: 0.6rem;
+    }
+  }
+}
+
+.goods_search{
+  .list-image{
+    padding: 1em 1em;
+  }
+  .image-item-overlay {
+    position: absolute;
+    background: #002352;
+    display: block;
+    opacity: 0.7;
+    width: 100%;
+    bottom: 0;
+    height: 40%;
+
+    .item_desc {
+      color: #fff;
+      font-size: 0.9em;
+      padding: 1em 0;
+    }
+  }
+}
 .search-box {
   position: relative;
   padding: 0;
@@ -40,6 +93,17 @@
   .back_icon {
     margin-left: 10%;
     text-decoration: none;
+  }
+
+  .package_back {
+    text-decoration: none;
+    color: #000;
+    font-size: 0.9rem;
+    cursor: pointer;
+    margin-left: 15%;
+    @media #{$small-only} {
+      margin-top: 20%;
+    }
   }
 
   .back_button {
@@ -119,7 +183,6 @@
       padding: 0.2rem 0;
     }
   }
-
   .org_search{
     color: #E2E6EB;
     margin-left: -2%;
@@ -136,7 +199,8 @@
     left: 50%;
   }
 }
-.search-code {
+.search-code,
+.goods_search {
   .back-link {
     text-decoration: none;
     padding-top: 0.9rem;
@@ -144,6 +208,15 @@
     cursor: pointer;
     font-size: 0.9rem;
     padding-left: 1.5rem;
+  }
+  li {
+    border-bottom: unset !important;
+  }
+  .title {
+    margin-top: 0.8em;
+    margin-left: 0.3em;
+    font-size: 1em;
+    color: white;
   }
 }
 
